# datavalgen-model-example

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: build_and_release.yaml
src/datavalgen_model_example/: factory.py  model.py
