[project]
name = "datavalgen-model-example"
version = "0.1.1"
description = "Example of a data model and factory to use with datavalgen."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datavalgen>=0.1.1"
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# datavalgen contract: entrypoints for models and factories and homepage url
[project.entry-points."datavalgen.models"]
example = "datavalgen_model_example.model:DataModel"
[project.entry-points."datavalgen.factories"]
example = "datavalgen_model_example.factory:DataModelFactory"
[project.urls]
Homepage = "https://github.com/mdw-nl/datavalgen-model-example"
