[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[project]
name = "datavalgen-model-example"
version = "0.0.0"
description = "Example of a data model and factory to use with datavalgen."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datavalgen @ https://github.com/mdw-nl/datavalgen/archive/refs/tags/v0.3.0.tar.gz"
]

[tool.uv.build-backend]
module-name = "datavalgen_model_example"

# datavalgen contract: entrypoints for models and factories and homepage url
[project.entry-points."datavalgen.models"]
example = "datavalgen_model_example.model:FullDataModel"
example_full = "datavalgen_model_example.model:FullDataModel"
example_identity_admin = "datavalgen_model_example.model:IdentityAdminModel"
example_demographics = "datavalgen_model_example.model:DemographicsModel"
example_episode_dates = "datavalgen_model_example.model:EpisodeDatesModel"
example_clinical_outcome = "datavalgen_model_example.model:ClinicalOutcomeModel"
example_demographics_clinical_outcome = "datavalgen_model_example.model:DemographicsClinicalOutcomeModel"

[project.entry-points."datavalgen.factories"]
example = "datavalgen_model_example.factory:DataModelFactory"
[project.urls]
Homepage = "https://github.com/mdw-nl/datavalgen-model-example"
